# cppTriangleCalculator

./: .clang-tidy-example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ConfigureClangTidy.cmake
include/TriangleCalculatorLib/: ReturnCode.hpp  Triangle.hpp  TriangleCalculator.hpp
include/logging/: logging.hpp
src/: CMakeLists.txt
src/TriangleCalculatorLib/: CMakeLists.txt  TriangleCalculator.cpp  TriangleCalculatorBackend.cpp  TriangleCalculatorBackend.hpp  TrianglePointerView.hpp
src/app/: CMakeLists.txt  main.cpp  ostream_logger.hpp
src/include/lib1/: lib_example.hpp
src/include/logging/: logging.hpp
src/lib1/: CMakeLists.txt  lib_example.cpp  lib_privateCode.cpp  lib_privateCode.hpp
tests/: CMakeLists.txt  TriangleCalculatorTests.cpp  TriangleGenerator.py  example_tests.cpp  ostream_logger.hpp  test_logging.hpp  triangles_fp.json
